v0.0.6

* [BGBUILD-93] Add Red Hat Enterprise Linux 6 support
* [BGBUILD-132] Require only region name change for S3 plugin to register AMI in different region
* [BGBUILD-120] Add support for all EC2 regions
* [BGBUILD-135] Display the region name when reporting the registered ami
* [BGBUILD-137] Show the appliance name in the ami registration notice

v0.0.5

* [BGBUILD-117] Remove Fedora 11 and 12 support
* [BGBUILD-55] Use euca2ools instead of ec2-ami-tools
* [BGBUILD-115] PackageHelper should take directory instead of file list to package

v0.0.4

* [BGBUILD-85] Adjust BoxGrinder spec files for review

v0.0.3

* [BGBUILD-66] Store tarred appliances files in s3-plugin/ dir for s3-plugin
* [BGBUILD-67] Add Fedora 14 support for S3 delivery plugin: AMI type
* [BGBUILD-63] Use 'aws' gem instead 'aws-s3' because it's already packaged in Fedora

v0.0.2

* Fixed issues with arch/base_arch

v0.0.1

* First release
